# react-component-gen

./: Cargo.toml  README.md
src/: lib.rs  main.rs
template/: Component.txt
tests/: lib_test.rs
