[package]
name = "react-component-gen"
version = "0.1.0"
authors = ["HurricaneInteractive <hurricane.interactive@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.10"
failure = "0.1.5"
exitfailure = "0.5.1"
git2 = "0.10"
